<resources>
    <string name="app_name">BookSmart</string>
    <string name="notification_content_title">Playback cannot be resumed</string>
    <string name="notification_content_text">Press on the play button on the media notification if it
    is still present, otherwise please open the app to start the playback and re-connect the session
    to the controller</string>

    <string name="notification_channel_name">Playback cannot be resumed</string>
    <string name="import_publication_unable_add_pub_database">Unable to add publication to the database</string>

    <string name="import_publication_unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
    <string name="import_publication_download_failed">Publication download failed.</string>
    <string name="import_publication_no_acquisition">Acquisition is not possible.</string>

    <string name="opening_publication_cannot_render">Cannot render publication.</string>
    <string name="opening_publication_audio_engine_initialization">Could not open publication because audio engine initialization failed.</string>

    <string name="tts_error_initialization">Failed to initialize the TTS engine</string>
    <string name="tts_error_language_support_incomplete">The language %s requires additional data. Do you want to download it?</string>
    <string name="tts_error_network">A networking error occurred</string>
    <string name="tts_error_other">A TTS error occurred</string>
    <string name="tts_next">Go forward</string>
    <string name="tts_pause">Pause</string>
    <string name="tts_play">Play</string>
    <string name="tts_previous">Go backward</string>
    <string name="speed_rate">Speed</string>
    <string name="pitch_rate">Pitch</string>
    <string name="tts_settings">Speech settings</string>
    <string name="tts_stop">Stop</string>
    <string name="tts_voice">Voice</string>


    <string name="publication_error_unsupported_asset">Asset format is not supported</string>
    <string name="publication_error_network_forbidden">Server denied access to a resource.</string>
    <string name="publication_error_network_not_found">A resource has not been found on the server.</string>
    <string name="publication_error_network_unreachable">Server cannot be reached.</string>
    <string name="publication_error_network_timeout">Server was too long to respond.</string>
    <string name="publication_error_network_ssl_handshake">A SSL error occurred.</string>
    <string name="publication_error_network_unexpected">An unexpected network error occurred.</string>
    <string name="publication_error_filesystem_not_found">A file has not been found.</string>
    <string name="publication_error_filesystem_unexpected">An unexpected filesystem error occurred.</string>
    <string name="publication_error_filesystem_insufficient_space">There is not enough space left on the device.</string>
    <string name="publication_error_incorrect_credentials">Provided credentials were incorrect</string>
    <string name="publication_error_restricted">You are not allowed to open this publication</string>
    <string name="publication_error_out_of_memory">There is not enough memory on this device to open the publication.</string>
    <string name="publication_error_scheme_not_supported">Publication source is not supported.</string>
    <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
    <string name="publication_error_unexpected">An unexpected error occurred.</string>

    <string name="lcp_error_license_interaction_not_available">This interaction is not available</string>
    <string name="lcp_error_license_profile_not_supported">This License has a profile identifier that this app cannot handle, the publication cannot be processed</string>
    <string name="lcp_error_crl_fetching">Can\'t retrieve the Certificate Revocation List</string>
    <string name="lcp_error_network">Network error</string>
    <string name="lcp_error_runtime">Unexpected LCP error</string>
    <string name="lcp_error_unknown">Unknown LCP error</string>

    <string name="lcp_error_license_status.cancelled">This license was cancelled on %1$s</string>
    <string name="lcp_error_license_status.returned">This license has been returned on %1$s</string>
    <string name="lcp_error_license_status.not_started">This license starts on %1$s</string>
    <string name="lcp_error_license_status.expired">This license expired on %1$s</string>
    <plurals name="lcp_error_license_status.revoked">
        <item quantity="one">This license was revoked by its provider on %1$s. It was registered by %2$d device.</item>
        <item quantity="other">This license was revoked by its provider on %1$s. It was registered by %2$d devices.</item>
    </plurals>

    <string name="lcp_error_renew.renew_failed">Your publication could not be renewed properly</string>
    <string name="lcp_error_renew.invalid_renewal_period">Incorrect renewal period, your publication could not be renewed</string>
    <string name="lcp_error_renew.unexpected_server_error">An unexpected error has occurred on the server</string>

    <string name="lcp_error_return.return_failed">Your publication could not be returned properly</string>
    <string name="lcp_error_return.already_returned_or_expired">Your publication has already been returned before or is expired</string>
    <string name="lcp_error_return.unexpected_server_error">An unexpected error has occurred on the server</string>

    <string name="lcp_error_parsing">The JSON is not representing a valid document</string>
    <string name="lcp_error_parsing.malformed_json">The JSON is malformed and can\'t be parsed</string>
    <string name="lcp_error_parsing.license_document">The JSON is not representing a valid License Document</string>
    <string name="lcp_error_parsing.status_document">The JSON is not representing a valid Status Document</string>

    <string name="lcp_error_container.open_failed">Can\'t open the license container</string>
    <string name="lcp_error_container.file_not_found">License not found in container</string>
    <string name="lcp_error_container.read_failed">Can\'t read license from container</string>
    <string name="lcp_error_container.write_failed">Can\'t write license in container</string>

    <string name="lcp_error_license_integrity.certificate_revoked">Certificate has been revoked in the CRL</string>
    <string name="lcp_error_license_integrity.invalid_certificate_signature">Certificate has not been signed by CA</string>
    <string name="lcp_error_license_integrity.invalid_license_signature_date">License has been issued by an expired certificate</string>
    <string name="lcp_error_license_integrity.invalid_license_signature">License signature does not match</string>
    <string name="lcp_error_license_integrity.invalid_user_key_check">User key check invalid</string>

    <string name="lcp_error_decryption.content_key_decrypt_error">Unable to decrypt encrypted content key from user key</string>
    <string name="lcp_error_decryption.content_decrypt_error">Unable to decrypt encrypted content from content key</string>

    <string name="missing_lcp_support">The application was compiled without LCP support.</string>
    <string name="reader_error">Error</string>
    <string name="opening_error">Could not open publication</string>
    <string name="import_error">Import error</string>
    <string name="error_unexpected">An unexpected error occurred.</string>
    <string name="epubactivity_set_bookmark">Bookmark</string>
    <string name="epubactivity_settings">Setting</string>
    <string name="epubactivity_read_aloud_start">Voice over</string>
    <string name="epubactivity_search">Search</string>
    <string name="epubactivity_book_nav_options">Book navigation menu</string>
    <string name="epubactivity_drm_info">DRM Info</string>
    <string name="search_error_not_searchable"><![CDATA[" <string name=\"search_error_not_searchable\">This publication is not searchable</string>"]]></string>

</resources>