<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context='org.readium.r2.testapp.reader.BaseReaderFragment'>

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/epubactivity_search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconifiedByDefault="false"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/tts"
        android:icon="@drawable/outline_volume_down_24"
        android:title="@string/epubactivity_read_aloud_start"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>


    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/outline_bookmark_border_24"
        android:title="@string/epubactivity_set_bookmark"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/outline_settings_24"
        android:visible="false"
        android:title="@string/epubactivity_settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/drm"
        android:icon="@drawable/baseline_lock_outline_24"
        android:visible="false"
        android:title="@string/epubactivity_drm_info"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>


    <item
        android:id="@+id/toc"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/epubactivity_book_nav_options"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

</menu>